# packdetect

./: README.md
packetdetect/: README.md  gitignore  pyproject.toml  requirements.txt
packetdetect/packdetect/: __main__.py  engine.py  output.py
packetdetect/packdetect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
packetdetect/tests/: test_engine.py
