[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packdetect"
version = "1.0.0"
description = "Packer detection & unpacking tool for PE binaries"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["reverse-engineering", "malware", "packer", "pe", "security"]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
packdetect = "packdetect.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
